# Scoop

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes.txt
assets/models/: 42.mtl
includes/: Device.hpp  Matrix.hpp  Model.hpp  Object.hpp  Pipeline.hpp  SceneUtils.hpp  ShowcaseApp.hpp  SwapChain.hpp  TextRenderer.hpp  UiApp.hpp  UiRenderer.hpp  Utils.hpp  VulkanContext.hpp  WavefrontHelpers.hpp  Window.hpp
scripts/: setUpProfilers.sh  vulkan_env.sh
shaders/: FSR.comp  FSRSharpen.comp  fullScreen.frag  fullScreen.vert  rayTrace.comp  rayTraceExtendRay.comp  rayTraceFinalWrite.comp  rayTraceLogic.comp  rayTraceLogicDiffuse.comp  rayTraceLogicSpecular.comp  rayTraceMaterial.comp  rayTraceMaterialDiffuse.comp  rayTraceMaterialSpecular.comp  rayTraceNewPath.comp  rayTracePrimaryExtendRay.comp  rayTracePrimaryNewPath.comp  rayTraceShadowRay.comp  rayTraceSimple.comp  rayTraceWritePrimaryNRD.comp  rect.frag  rect.vert  text.frag  text.vert
src/: Device.cpp  Model.cpp  NRDIntegration.cpp  Object.cpp  ObjectSBVH.cpp  Pipeline.cpp  ShowcaseApp.cpp  ShowcaseAppRuntime.cpp  SwapChain.cpp  TextRenderer.cpp  UiApp.cpp  UiRenderer.cpp  VulkanContext.cpp  Window.cpp  main.cpp
